--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -335,6 +335,51 @@ $$
 \end{aligned}
 $$
 
+## Back to ANOVA
+
+### Conceptual 
+
+In the preceding simulations we saw how the variance of the distribution of sample means was different in the a) population means the same scenario and b) population means different scenario. That is, when the population means were different the variance of the distribution of sample means was larger.  Think about this finding in terms of an experiment.
+
+Consider a scenario where you are interested in examining the effect of crowding on aggressive behavior. Your dependent variable is aggressive behavior. Your indpendent variable is Crowding with three levels: low, medium, and high. Your study has 5 people in each of these three conditions. The 5 people's aggression scores in the low crowding condition represent a sample aggression scores from a low crowding population. Likewise, the 5 people's aggression scores in the medium crowding condition represent a sample aggression scores from a medium crowding population. Finally, the 5 people people's aggression scores in the high crowding condition represent a sample aggression scores from a high crowding population. 
+
+You calculate a sample mean for each of the three conditions. You are asking if there is an effect of crowding on aggression. To answer this question we need to think of the distribution of sample means that would occur if you repeats the study thousands of times. If you repeated the study thousand of times, and crowding had now effect on aggression the distribution of sample means differ only due to sampling error and be described by the formula below. We think of this formula as describing the distribution of sample means under the Null Hypothesis (i.e., the scenario where the population means are equal.)
+
+$$
+\begin{aligned} 
+\sigma_{\bar{x}}^2 &= \text{variance due to sampling error} 
+&= \frac{\sigma_{people}^2}{n} \\
+\end{aligned}
+$$
+
+
+In contrast, if the crowding manipulation did influence aggressive behavior, this means there are different population means for the three crowding conditions. If the population means are different, then means the variance for the distribution of sample means would correspond to:
+
+$$
+\begin{aligned} 
+\sigma_{\bar{x}}^2 &= \text{variance due to sampling error} + \text{variance in population means} \\
+&= \frac{\sigma_{people}^2}{n} + \sigma_{\mu_A}^2\\
+\end{aligned}
+$$
+
+
+Conceptually, an F-value represents the comparison of these two approaches:
+
+
+$$
+\begin{aligned} 
+F &= \frac{\text{variance due to sampling error} + \text{variance in population means}}{\text{variance due to sampling error}}//
+\end{aligned}
+$$
+
+
+
+
+
+## Formula
+
+
+
 ##  Summary
 
 
