--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -337,7 +337,7 @@ $$
 
 ## Back to ANOVA
 
-### Conceptual/Expected F-values
+### Conceptual/Expected $F$-values
 
 In the preceding simulations we saw how the variance of the distribution of sample means was different in the a) population means the same scenario and b) population means different scenario. That is, when the population means were different the variance of the distribution of sample means was larger.  Think about this finding in terms of an experiment.
 
@@ -363,7 +363,7 @@ $$
 $$
 
 
-Conceptually, an F-value represents the comparison of these two approaches:
+Conceptually, an $F$-value represents the comparison of these two approaches:
 
 $$
 \begin{aligned} 
@@ -374,13 +374,13 @@ $$
 
 ### Two scenarios
 
-Consider what happens to the above F-value when the population means are **all the same**. In this case the variance in population means is zero, $\sigma_{\mu_A}^2=0$. When this happens, the numerator and denominator are the same - so the expected F-value is 1.00.
+Consider what happens to the above $F$-value when the population means are **all the same**. In this case the variance in population means is zero, $\sigma_{\mu_A}^2=0$. When this happens, the numerator and denominator are the same - so the expected $F$-value is 1.00.
 
-Now consider what happens to the above F-value when the population means are **different**. In this case, the variance of population means is larger than zero, $\sigma_{\mu_A}^2 > 0$. When this happens, the numerator is larger than the denominator - so the expected F-value is greater than 1.00.
+Now consider what happens to the above $F$-value when the population means are **different**. In this case, the variance of population means is larger than zero, $\sigma_{\mu_A}^2 > 0$. When this happens, the numerator is larger than the denominator - so the expected $F$-value is greater than 1.00.
 
 ## Calculation
 
-The F-value formulas presented above are for the expected values. How do we calculate F-values in practice. The formula below estimates the variance in sample means due to all sources (sampling error and the variance in population means): 
+The $F$-value formulas presented above are for the expected values. How do we calculate $F$-values in practice? The formula below estimates the variance in sample means due to all sources (sampling error and the variance in population means): 
 
 $$
 \begin{aligned} 
@@ -389,7 +389,7 @@ s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}
 $$
 
 
-In contrast, the formula below estimate the variance due to sampling error alone:
+In contrast, the formula below estimates the variance due to sampling error alone:
 
 $$
 \begin{aligned} 
@@ -398,7 +398,7 @@ s_{\bar{x}}^2 = \frac{s_{people}^2}{n}
 $$
 
 
-Consequently, in practice we calculate F-values using the equation below.
+Consequently, in practice we calculate $F$-values using the equation below.
 
 $$
 \begin{aligned} 
@@ -409,7 +409,7 @@ $$
 
 ## A confusing rearrangement
 
-Unfortunately, most textbooks don't present F-values in the conceptually easy to follow way presented above. Instead, they use an algebraic rearrangement presented below. This rearrangment is important, however, because it is the basis for how information is presented in an ANOVA table. Unfortunately, when rearranged in the manner below - it's hard to understand the equation.
+Unfortunately, most textbooks don't present $F$-values in the conceptually easy to follow way presented above. Instead, they use the algebraic rearrangement presented below. The rearrangment is important, however, because it is the basis for how information is presented in an ANOVA table. Unfortunately, when the rearranged in used - it's hard to understand the equation.
 
 $$
 \begin{aligned} 
@@ -421,7 +421,7 @@ F &= \frac{\frac{\sigma_{people}^2}{n} + \sigma_{\mu_A}^2}{\frac{\sigma_{people}
 \end{aligned}
 $$
 
-Likewise, the calculation version is often presented in a different way:
+Likewise, the calculation version is often presented in a different way - which is also harder to understand:
 
 $$
 \begin{aligned} 
@@ -434,9 +434,7 @@ F &= \frac{\frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}}{\frac{s_
 $$
 
 
-
 ##  Summary
-
 
 |          Attribute           |                                  Parameter Calculation                                   |                               Estimate of Parameter                               | Reflects         |
 |:----------------------------:|:----------------------------------------------------------------------------------------:|:---------------------------------------------------------------------------------:|:----------------:|
