--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -1,7 +1,7 @@
 ---
 output:
-  pdf_document: default
   html_document: default
+  pdf_document: default
 ---
 
 # Deeper dive sampling [under construction]
@@ -341,13 +341,13 @@ $$
 
 In the preceding simulations we saw how the variance of the distribution of sample means was different in the a) population means the same scenario and b) population means different scenario. That is, when the population means were different the variance of the distribution of sample means was larger.  Think about this finding in terms of an experiment.
 
-Consider a scenario where you are interested in examining the effect of crowding on aggressive behavior. Your dependent variable is aggressive behavior. Your indpendent variable is Crowding with three levels: low, medium, and high. Your study has 5 people in each of these three conditions. The 5 people's aggression scores in the low crowding condition represent a sample aggression scores from a low crowding population. Likewise, the 5 people's aggression scores in the medium crowding condition represent a sample aggression scores from a medium crowding population. Finally, the 5 people people's aggression scores in the high crowding condition represent a sample aggression scores from a high crowding population. 
+Consider a scenario where you are interested in examining the effect of crowding on aggressive behavior. Your dependent variable is aggressive behavior. Your independent variable is Crowding with three levels: low, medium, and high. Your study has 5 people in each of these three conditions. The 5 people's aggression scores in the low crowding condition represent a sample aggression scores from a low crowding population. Likewise, the 5 people's aggression scores in the medium crowding condition represent a sample aggression scores from a medium crowding population. Finally, the 5 people people's aggression scores in the high crowding condition represent a sample aggression scores from a high crowding population. 
 
 You calculate a sample mean for each of the three conditions. You are asking if there is an effect of crowding on aggression. To answer this question we need to think of the distribution of sample means that would occur if you repeats the study thousands of times. If you repeated the study thousand of times, and crowding had now effect on aggression the distribution of sample means differ only due to sampling error and be described by the formula below. We think of this formula as describing the distribution of sample means under the Null Hypothesis (i.e., the scenario where the population means are equal.)
 
 $$
 \begin{aligned} 
-\sigma_{\bar{x}}^2 &= \text{variance due to sampling error} 
+\sigma_{\bar{x}}^2 &= \text{variance due to sampling error} \\
 &= \frac{\sigma_{people}^2}{n} \\
 \end{aligned}
 $$
@@ -409,7 +409,7 @@ $$
 
 ## A confusing rearrangement
 
-Unfortunately, most textbooks don't present $F$-values in the conceptually easy to follow way presented above. Instead, they use the algebraic rearrangement presented below. The rearrangment is important, however, because it is the basis for how information is presented in an ANOVA table. Unfortunately, when the rearranged in used - it's hard to understand the equation.
+Unfortunately, most textbooks don't present $F$-values in the conceptually easy to follow way presented above. Instead, they use the algebraic rearrangement presented below. The rearrangement is important, however, because it is the basis for how information is presented in an ANOVA table. Unfortunately, when the rearranged in used - it's hard to understand the equation.
 
 $$
 \begin{aligned} 
@@ -479,19 +479,35 @@ $$
 \end{aligned}
 $$
 
-Third we compare those two estimate in a ratio:
+Third we compare those two estimates in a ratio:
 
 $$
 \begin{aligned}
 F &= \frac{\text{total variance in means}}{\text{variance due to sampling error}}\\
 &= \frac{\text{variance due to sampling error} + \text{variance in population means}}{\text{variance due to sampling error}}\\
 &= \frac{\frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}}{\frac{s_{people}^2}{n}}\\
-&= \frac{14450501.13}{185932.6}\\
+&= \frac{14450501.13}{\frac{36442780}{196}}\\
 &= 77.72\\
 \end{aligned}
 $$
 
+The rearrangement of the $F$-value equation is below. This can be used to understand the other components of the $F$-table.
 
+
+$$
+\begin{aligned}
+F &= \frac{ \frac{(n)\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}}{s_{people}^2}\\
+&= \frac{(196)14450501.13}{36442780}\\
+&= \frac{2832298221}{36442780}\\
+&= 77.72\\
+\end{aligned}
+$$
+
+Below we see this formula mapped to the $F$-table:
+
+```{r ftablelabeled, out.width = "100%", echo=FALSE, fig.cap= "Mapping formulas to the F-table."}
+knitr::include_graphics("ch_deeper_sampling/images/ftable_desc.png")
+```
 
 
 ##  Summary
