--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -472,8 +472,7 @@ Third, we estimate the variance in the distribution of sample means due to all s
 
 $$
 \begin{aligned}
-\text{total variance in means} &= \text{variance due to sampling error} + \text{variance in population means}\\
-&= \frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}\\
+\text{variance due to sampling error} + \text{variance in population means} &= \frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}\\
 &= \frac{(17498.97959-20899.83503)^2+(20196.90306-20899.83503)^2+(25003.62245-20899.83503)^2}{3-1}\\
 &= 14450501.13
 \end{aligned}
@@ -483,8 +482,7 @@ Third we compare those two estimates in a ratio:
 
 $$
 \begin{aligned}
-F &= \frac{\text{total variance in means}}{\text{variance due to sampling error}}\\
-&= \frac{\text{variance due to sampling error} + \text{variance in population means}}{\text{variance due to sampling error}}\\
+F &= \frac{\text{variance due to sampling error} + \text{variance in population means}}{\text{variance due to sampling error}}\\
 &= \frac{\frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}}{\frac{s_{people}^2}{n}}\\
 &= \frac{14450501.13}{\frac{36442780}{196}}\\
 &= 77.72\\
