--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -457,7 +457,7 @@ $$
 $$
 
 
-Second, we estimate the variance in sample means  as if sampling error was the only source of variability:
+Second, we estimate the variance in sample means as if sampling error was the only source of variability:
 
 $$
 \begin{aligned}
@@ -472,7 +472,7 @@ Third, we estimate the variance in the distribution of sample means due to all s
 
 $$
 \begin{aligned}
-\text{variance due to sampling error} + \text{variance in population means} &= \frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}\\
+s_{\bar{x}}^2 &= \frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}\\
 &= \frac{(17498.97959-20899.83503)^2+(20196.90306-20899.83503)^2+(25003.62245-20899.83503)^2}{3-1}\\
 &= 14450501.13
 \end{aligned}
