--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -478,7 +478,7 @@ s_{\bar{x}}^2 &= \frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}\\
 \end{aligned}
 $$
 
-Third we compare those two estimates in a ratio:
+Fourth, we compare those two estimates in a ratio:
 
 $$
 \begin{aligned}
