--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -4,7 +4,7 @@ output:
   pdf_document: default
 ---
 
-# Deep Dive: Sampling Distributions 
+# Deep dive: Sampling and ANOVA
 
 ## Equal population means
 
