--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -4,7 +4,7 @@ output:
   pdf_document: default
 ---
 
-# Deeper dive sampling [under construction]
+# Deeper dive: Sampling and ANOVA
 
 ## Previously: Equal Population Means
 
@@ -406,6 +406,10 @@ F = \frac{\frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}}{\frac{s_{
 \end{aligned}
 $$
 
+
+```{r formulamap, out.width = "100%", echo=FALSE, fig.cap= "Linking conceptual and calculation formulas for the F-value."}
+knitr::include_graphics("ch_deeper_sampling/images/screenshot_formula_map.png")
+```
 
 ## A confusing rearrangement
 
