--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -413,7 +413,7 @@ knitr::include_graphics("ch_deeper_sampling/images/screenshot_formula_map.png")
 
 ## A confusing rearrangement
 
-Unfortunately, most textbooks don't present $F$-values in the conceptually easy to follow way presented above. Instead, they use the algebraic rearrangement presented below. The rearrangement is important, however, because it is the basis for how information is presented in an ANOVA table. Unfortunately, when the rearranged in used - it's hard to understand the equation.
+Unfortunately, most textbooks don't present $F$-values in the conceptually easy to follow way presented above. Instead, they use the algebraic rearrangement presented below. The rearrangement is important, however, because it is the basis for how information is presented in an ANOVA table. Unfortunately, when the rearrangement is used - it's hard to understand the equation.
 
 $$
 \begin{aligned} 
