--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -476,7 +476,7 @@ Third, we estimate the variance in the distribution of sample means due to all s
 
 $$
 \begin{aligned}
-s_{\bar{x}}^2 &= \frac{\sum_{i=1}^{a=3}{(\bar{x}_i - v)^2}}{a-1}\\
+s_{\bar{x}}^2 &= \frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}\\
 &= \frac{(\bar{x}_{negative}-\bar{\bar{x}})^2+(\bar{x}_{none}-\bar{\bar{x}})^2+(\bar{x}_{positive}-\bar{\bar{x}})^2}{3-1}\\
 &= \frac{(17498.97959-20899.83503)^2+(20196.90306-20899.83503)^2+(25003.62245-20899.83503)^2}{3-1}\\
 &= 14450501.13
